actions/govbot/tests/snapshots/wizard_tests__wizard_session_all.snap
---
source: tests/wizard_tests.rs
expression: "&session.to_snapshot()"
---
=== Wizard Session ===

Welcome to govbot! Let's set up your project.

? What datasets do you want to track?
> All jurisdictions in the registry
  Select specific datasets

Classification is done by fastclass against a classifier bundle.
Point the manifest's `transforms.classify.classifier` at your
bundle directory (containing classifier.yml). See the fastclass
docs to build one.

Publishing is configured for an RSS feed by default.
Your feed will be generated in the "docs" directory.

? Base URL for your feed: https://myuser.github.io/my-govbot

  ✓ Created govbot.yml
  ✓ Created .gitignore
  ✓ Created .github/workflows/build.yml

Setup complete! Run 'govbot' again to start the pipeline.

=== Generated: govbot.yml ===

# Govbot Manifest
# Schema: https://raw.githubusercontent.com/chihacknight/govbot/main/schemas/govbot.schema.json
$schema: https://raw.githubusercontent.com/chihacknight/govbot/main/schemas/govbot.schema.json

datasets:
  - all

transforms:
  classify:
    command: [fastclass, classify, "-"]
    reads: docs
    writes: classification
    # Path to your fastclass classifier bundle (containing classifier.yml).
    classifier: ./classifier

publish:
  feed:
    type: rss
    base_url: "https://myuser.github.io/my-govbot"
    output_dir: "docs"
    output_file: "feed.xml"

pipelines:
  default:
    - classify
    - feed

=== Generated: .github/workflows/build.yml ===

# Run Govbot
# Runs govbot to pull datasets, apply classifications, and publish feeds.

name: Build Govbot

on:
  push:
    branches:
      - main
      - master
  schedule:
    - cron: '0 0 * * *'
  workflow_dispatch:
    inputs:
      limit:
        description: 'Limit number of entries per artifact (default: 100, use "none" for all)'
        required: false
        type: string

jobs:
  govbot:
    runs-on: ubuntu-latest

    steps:
      - name: Checkout repository
        uses: actions/checkout@v4

      - name: Run Govbot
        uses: chihacknight/govbot/actions/govbot@main
        with:
          limit: ${{ inputs.limit }}
