actions/govbot/tests/snapshots/wizard_tests__wizard_session_specific_own_tags.snap
---
source: tests/wizard_tests.rs
expression: "&session.to_snapshot()"
---
=== Wizard Session ===

Welcome to govbot! Let's set up your project.

? What data sources do you want to track?
  All states (47 jurisdictions)
> Select specific states

Available states/jurisdictions:
  ak, al, ar, ca, co, de, fl, ga, gu, hi
  ia, id, il, in, ks, ky, la, ma, md, me
  mi, mn, mo, mp, ms, mt, nc, nd, ne, nh
  nj, nm, nv, ny, oh, ok, or, pa, pr, ri
  sc, sd, tn, usa, ut, vi, vt, wa, wi, wv
  wy

? Enter state codes separated by spaces: il ca ny

Tags let govbot categorize legislation by topics you care about.
Here's an example tag definition:

  education:
    description: |
      Legislation related to schools, education funding,
      curriculum standards, and educational policy.
    examples:
      - "Increases per-pupil funding for public schools"
      - "Mandates comprehensive sex education curriculum"

? How would you like to set up tags?
  Use the example "education" tag to start
> I'll create my own tags later

To create a tag, copy this prompt into your preferred AI tool:

---
Create a govbot tag definition in YAML for tracking [YOUR TOPIC] legislation.
The tag should have:
- A description (multiline, covering subtopics)
- 2-3 example bill descriptions that would match
- Optional: include_keywords and exclude_keywords lists

Format:
  tag_name:
    description: |
      ...
    examples:
      - "..."
    include_keywords:
      - keyword1
    exclude_keywords:
      - keyword1
---

Paste the result into your govbot.yml under the 'tags:' section.

Publishing is configured for RSS feeds by default.
Your feeds will be generated in the "docs" directory.

? Base URL for your feeds: https://example.com

  ✓ Created govbot.yml
  ✓ Created .gitignore with govbot_data
  ✓ Created .github/workflows/build.yml

Setup complete! Run 'govbot' again to start the pipeline.

=== Generated: govbot.yml ===

# Govbot Configuration
# Schema: https://raw.githubusercontent.com/chihacknight/govbot/main/schemas/govbot.schema.json
$schema: https://raw.githubusercontent.com/chihacknight/govbot/main/schemas/govbot.schema.json

repos:
  - il
  - ca
  - ny

tags:
  # Add your tags here. Example:
  # my_topic:
  #   description: |
  #     Legislation related to ...
  #   examples:
  #     - "Example bill description"
  {}

build:
  base_url: "https://example.com"
  output_dir: "docs"
  output_file: "feed.xml"

=== Generated: .github/workflows/build.yml ===

# Run Govbot
# Runs govbot to clone repos, tag bills, and build RSS feeds and HTML index.

name: Build Govbot

on:
  push:
    branches:
      - main
      - master
  schedule:
    - cron: '0 0 * * *'
  workflow_dispatch:
    inputs:
      tags:
        description: 'Comma-separated list of tags to include (leave empty for all tags)'
        required: false
        type: string
      limit:
        description: 'Limit number of entries per feed (default: 15, use "none" for all)'
        required: false
        type: string

jobs:
  govbot:
    runs-on: ubuntu-latest

    steps:
      - name: Checkout repository
        uses: actions/checkout@v4

      - name: Run Govbot
        uses: chihacknight/govbot/actions/govbot@main
        with:
          tags: ${{ inputs.tags }}
          limit: ${{ inputs.limit }}
